# artemis

./: .coafile  .gitignore  .gitlab-ci.yml  .helmignore  .mailmap  .pre-commit-config.yaml  .pylintrc  .yamllint-moduleinfo  ARTEMIS_HOOK_OPENSTACK_ENVIRONMENT_TO_IMAGE.py  ARTEMIS_HOOK_ROUTE.py  Chart.yaml  Containerfile  LICENSE  LICENSE_SPDX  Makefile  Makefile.lib  README.adoc  README.md  README.rst  artemis_high_level.gv  baseosci-xunit.xsd  catalog-info.yaml  conftest.py  develop.sh  failure.txt  flows.yaml  generate-docs.yml  hook_OPENSTACK_ENVIRONMENT_TO_IMAGE.py  hook_ROUTE.py  inject-extra-requirements.yml  mypy.ini  nodes.yaml  nominishift-develop.sh  pyproject.toml  pytest.ini  required_hooks  run.sh  setup.cfg  setup.py  skaffold.yaml  (+3 more)
cli/: .pre-commit-config.yaml  LICENSE  Makefile  README.adoc  mypy.ini  pyproject.toml  tox.ini
cli/autodocs/: Makefile
cli/autodocs/source/: conf.py  index.rst
cli/src/tft/artemis_cli/: __init__.py  api.py  artemis_cli.py
cli/src/tft_artemis_cli/: __init__.py
cli/src/tft_artemis_cli/schemas/: config.yaml
cli/tests/: test_console_logs.py  test_image_cache_update.py  test_image_info_update.py  test_pools.py
cli/tests/data/: ansi_logs  long_log  short_log  short_log_head_tail_split_overlap
server/: .pre-commit-config.yaml  Makefile  README.adoc  artemis-image-map-ibmcloud-power.yaml  artemis-image-map-ibmcloud-vpc.yaml  docker-compose.yml  extract-knobs  generate-changelog.py  mypy.ini  nominishift-develop.sh  podman-compose.yml  pyproject.toml  run.sh  tox.ini
server/alembic/: env.py
server/alembic/versions/: 0404338f093a_add_skip_prepare_verify_ssh_to_guest_.py  0da45d07fde0_convert_guest_snapshot_state_to_enum.py  17445bd3cd8d_removes_unused_pool_resource_metrics_.py  1d54a4ff03e8_adds_knobs_table.py  237cc90c30dc_add_shelving_related_guest_states.py  23acf56cffe4_add_shelving_support.py  23bbd5dab7de_add_custom_in_pool_guest_label_aka_.py  261f53f52b83_add_guest_events_guestname_updated_index.py  275f45109b5c_create_security_group_rules_field.py  28e90f8952e9_add_log_types_field_to_guest_request.py  2a205a7d6150_adding_pool_resources_metrics_table.py  2f06732734fa_adds_knobs_table.py  304435134b82_convert_knob_value_to_json.py  3082955b6723_add_column_storing_task_to_be_.py  3af7c26ec4f3_introduce_guest_shelf_table.py  3fdd1a194d2c_guest_logs_table.py  4066bcbc54eb_create_index_from_guest_events_guestname.py  43204dc08933_introduce_guest_log_blobs.py  48609a3f5d7a_refactor_metrics_table.py  487f52cc5aef_guest_request_user_data_shall_never_be_.py  51c5e4b2a7ac_adds_table_for_successfull_provisioning_.py  54744e9a5aaf_add_task_sequence_requests.py  5529d49203b8_convert_guest_details_to_json.py  56597d9c983a_1_upgrade_to_sqlalchemy_2_0.py  56597d9c983a_2_upgrade_to_sqlalchemy_2_0.py  56597d9c983a_3_upgrade_to_sqlalchemy_2_0.py  56597d9c983a_4_upgrade_to_sqlalchemy_2_0.py  56597d9c983a_upgrade_to_sqlalchemy_2_0.py  57f5d41c7200_.py  5b43d515411a_convert_ssh_keys_to_use_encrypted_.py  5f50a93ea161_add_console_url_data_to_guest_requests.py  63866e38fe0b_add_pool_tags_table.py  65c59ae05b97_add_flag_to_bypass_guest_shelf_selection.py  72026ebfe96c_add_undefined_state_for_guest_logs.py  7adee582ada3_adds_guest_tags_table.py  7fe045a4dcc4_convert_guest_pool_data_to_json.py  85e51f3435b4_adds_user_role_and_tokens.py  89f347ae4345_add_guest_request_guestname_poolname_.py  8c470c3f4331_upgrade_size_of_user_tokens_to_handle_sha256.py  8f7a33b3e529_adds_guest_requests_ctime.py  (+19 more)
server/autodocs/: Makefile
server/autodocs/source/: conf.py  index.rst  tft.rst
server/configuration/: ARTEMIS_HOOK_AWS_ENVIRONMENT_TO_IMAGE.py  ARTEMIS_HOOK_AWS_FLAVOR_FILTERS.py  ARTEMIS_HOOK_AZURE_ENVIRONMENT_TO_IMAGE.py  ARTEMIS_HOOK_AZURE_FLAVOR_FILTERS.py  ARTEMIS_HOOK_BEAKER_ENVIRONMENT_TO_IMAGE.py  ARTEMIS_HOOK_FLAVOR_FILTERS.py  ARTEMIS_HOOK_GCP_ENVIRONMENT_TO_IMAGE.py  ARTEMIS_HOOK_GCP_FLAVOR_FILTERS.py  ARTEMIS_HOOK_IBMCLOUD_POWER_ENVIRONMENT_TO_IMAGE.py  ARTEMIS_HOOK_IBMCLOUD_POWER_FLAVOR_FILTERS.py  ARTEMIS_HOOK_IBMCLOUD_VPC_ENVIRONMENT_TO_IMAGE.py  ARTEMIS_HOOK_IBMCLOUD_VPC_FLAVOR_FILTERS.py  ARTEMIS_HOOK_OPENSTACK_ENVIRONMENT_TO_IMAGE.py  ARTEMIS_HOOK_OPENSTACK_FLAVOR_FILTERS.py  ARTEMIS_HOOK_ROUTE.py  artemis-image-map-aws.yaml  artemis-image-map-azure.yaml  artemis-image-map-beaker.yaml  artemis-image-map-gcp.yaml  artemis-image-map-openstack.yaml  artemis-kickstart-compose-repo-map.yaml  artemis-kickstart-kexec.sh  artemis-kickstart.ks.j2  beaker-bootc-kickstart.ks  env.yml.sample  gen.sh  master-key.yaml.j2  server.yml.j2  server.yml.sample  userdata_allow_root
server/configuration/prometheus/: prometheus.yml
server/hooks/: ARTEMIS_HOOK_OPENSTACK_ENVIRONMENT_TO_IMAGE.py  ARTEMIS_HOOK_ROUTE.py
server/src/tft/artemis/: .dispatcher.py.old  db.py  (+18 more)
server/src/tft_artemis/: __init__.py  cache.py  context.py  db.py  metrics.py  routing_policies.py  security_group_rules.py
server/tests/: __init__.py  conftest.py  provisioning.py  test-provisioning-matrix-example.yaml  test_api.py  test_cache.py  test_context.py  test_db.py  test_drivers.py  test_dummy.py  test_environment.py  test_failure.py  test_guest_log_blob.py  test_knobs.py  test_middleware.py  test_middleware.py.bak  test_network_traffic_rules.py  test_pool_config.py  test_provisioning.py  test_routing_policies.py  test_security_group_rules.py  test_serializable.py  test_tasks.py  test_tasks_gc_events.py  test_tasks_release_pool_resources.py
server/tests/drivers/: README.adoc  __init__.py  test_aws.py  test_azure.py  test_beaker.py  test_openstack.py  test_release_pool_resources.py
server/tests/tasks/: __init__.py  conftest.py  test_gc_events.py  test_guest_shelf_lookup.py  test_prepare_verify_ssh.py  test_preprovision.py  test_refresh_pool_avoid_groups_hostnames_dispatcher.py  test_release_guest_request.py  test_release_pool_resources.py  test_remove_shelf.py  test_remove_shelf.py.bak  test_return_guest_to_shelf.py  test_route_guest_request.py  test_sequence.py  test_shelved_guest_watchdog.py  test_shelved_guest_watchdog.py.bak  test_tasks.py  test_update_guest_request.py
(+707 files in other folders)
