[tool.poetry]
name = "artemis-cli"
version = "0.0.1"
description = "Comand line tool for Artemis service"
authors = [
    "Milos Prchlik <mprchlik@redhat.com>",
    "Ondrej Ptak <optak@redhat.com>"
]
license = "Apache-2.0"
packages = [
  { include = "tft", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"

"tft-praxis" = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-use-fstring = "*"
mypy = "*"
mypy-extensions = "*"
pytest = "*"
tox = "*"

[tool.poetry.scripts]
artemis-cli = "tft.artemis_cli.artemis_cli:cli_root"

[tool.poetry.plugins."artemis_cli.command_plugins"]
"init" = "tft.artemis_cli.artemis_cli:cmd_init"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
