[tool.poetry]
name = "tft-artemis-cli"
version = "0.0.1"
description = "Comand line tool for Artemis service"
authors = [
    "Milos Prchlik <mprchlik@redhat.com>",
    "Ondrej Ptak <optak@redhat.com>"
]
license = "Apache-2.0"
packages = [
  { include = "tft", from = "src" }
]

[tool.poetry.dependencies]
python = "~3.7"
requests = "*"
click = "*"
click_spinner = "*"
jsonschema = "*"
"ruamel.yaml" = "^0.15.51"
tabulate = "*"
urlnormalizer = "^1.2.5"
click_completion = "^0.5.2"
stackprinter = "^0.2.4"
rich = "^2.2.6"

[tool.poetry.dev-dependencies]
# All development dependencies are left unpinned, untill we run into troubles with a particular version.
flake8 = "*"
flake8-docstrings = "*"
flake8-use-fstring = "*"
mypy = "*"
pytest = "*"
pytest-flake8 = "*"

[tool.poetry.scripts]
artemis-cli = "tft.artemis_cli.artemis_cli:cli_root"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
