[tool.poetry]
name = "tft-artemis-cli"
version = "0.0.2"
description = "Command-line tool for Artemis service"
authors = [
    "Milos Prchlik <mprchlik@redhat.com>",
    "Ondrej Ptak <optak@redhat.com>"
]
license = "Apache-2.0"
packages = [
  { include = "tft", from = "src" }
]

[tool.poetry.dependencies]
python = "~3.7"
requests = "*"
click = "*"
jsonschema = "*"
"ruamel.yaml" = "*"
urlnormalizer = "*"
click_completion = "*"
# TODO: once 3.0.0 is released, it should provide type annotations
semver = "*"
stackprinter = "*"
rich = "*"

[tool.poetry.dev-dependencies]
# All development dependencies are left unpinned, untill we run into troubles with a particular version.
flake8 = "*"
flake8-docstrings = "*"
flake8-use-fstring = "*"
mypy = "*"
pytest = "*"
pytest-flake8 = "*"

[tool.poetry.scripts]
artemis-cli = "tft.artemis_cli.artemis_cli:cli_root"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
