[project]
name = "tft-artemis"
version = "0.0.83"
description = "Artemis is a machine provisioning service. Its goal is to provision a machine - using a set of preconfigured providers as backends - which would satisfy the given hardware and software requirements."
authors = [
  { name = "Milos Prchlik", email = "mprchlik@redhat.com>" },
  { name = "Anna Khaitovich", email = "akhaitov@redhat.com>" },
  { name = "Evgeny Fedin", email = "efedin@redhat.com>" },
  { name = "Miroslav Vadkerti", email = "mvadkert@redhat.com>" },
  { name = "Ondrej Ptak", email = "optak@redhat.com>" },
  { name = "Daniel Simko", email = "dasimko@redhat.com" },
  { name = "Guy Inger", email = "ginger@redhat.com>" },
]
license = "Apache-2.0"

requires-python = "~=3.9.0"

dependencies = [
  # New mypy vs. new Alembic: https://github.com/python/mypy/issues/11038 - Alembic 1.7.4 adds a workaround
  "alembic == 1.8.1",
  # BeautifulSoup could be updated but it's pinned by gluetool to an older version...
  # "beautifulsoup4",
  "click",
  "dramatiq[rabbitmq]",
  "gluetool >=2.5",
  "gunicorn",
  "jinja2-ansible-filters",
  "jq",
  "Pint ==0.18",
  # Avoid newer versions until either https://github.com/python/mypy/issues/10757 is fixed, or package
  # delivers proper type annotations.
  "prometheus-client ~=0.12.0",
  "pyinstrument",
  "psycopg2",
  "sqlalchemy[mypy, postgresql, postgresql-psycopg]",
  "sqlalchemy-utils[encrypted]",
  "stackprinter",
  # Bumping just one minor version of starlette seems to mess with mypy
  "starlette ==0.41.2",
  "typing-extensions",
  # pendulum 3.x has an ugly bug when timezone is not specified, https://github.com/sdispater/pendulum/issues/791
  "pendulum ~=2.0",
  "periodiq",
  "redis",
  "returns",
  "jsonschema",
  "sentry-sdk ~=2.18",
  "setuptools",
  "fastapi",
  "uvicorn",
  "pykickstart ~=3.58",
  "tmt",
]

[project.optional-dependencies]
full = [
  "awscli >=1.36.13",
  "azure-cli",
  "beaker-client",
  # Do not use openstackclient >=7, there is some conflict between
  # it and openstacksdk when calling `get_limits()`
  "python-openstackclient ~=6.0.0",
  "python-glanceclient",
  "python-novaclient",
  "google-cloud-compute",
]

[tool.uv.sources]
dramatiq = { git = "https://github.com/dansimko/dramatiq.git", branch = "1.13.0-close-write-pipe" }

[dependency-groups]
# All development dependencies are left unpinned, untill we run into troubles with a particular version.
dev = [
  # Install `toml` extra to allow parsing pyproject.toml - no need for special config file for coverage.
  "coverage[toml]",
  "darglint",
  # flake8 5 introduced a bug https://github.com/tholo/pytest-flake8/issues/87
  "flake8 < 5.0.0",
  "flake8-docstrings",
  "flake8-use-fstring",
  "httpx",
  "mypy",
  "pytest",
  "pre-commit",
  "pytest-flake8",
  "pytest-icdiff",
  "pytest-mock",
  "redislite",
  # sqlalchemy-stubs = "*"
  "types-Pillow",
  "types-mock",
  "types-setuptools",
]

docs = [
  "Sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-typlog-theme",
]

[project.scripts]
artemis-api-server = "tft_artemis.api:main"
artemis-worker = "tft_artemis.scripts.worker:cmd_root"
artemis-dispatcher = "tft_artemis.dispatcher:main"
artemis-scheduler = "tft_artemis.scripts.scheduler:cmd_root"

# New tools to work with database
artemis-db-init-content = "tft_artemis.scripts.init_db_content:cmd_root"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
source = [
  "src/tft_artemis"
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.ruff]
line-length = 120
indent-width = 4
src = ["src", "tests"]
target-version = "py39"
# The following comes from the tmt project - pretty much everything is disabled for now, and we
# will enable them one by one or in groups, to keep patches reviewable.
lint.select = [
    "ASYNC",  # flake8-async
    "E",      # pycodestyle error
    "ERA",    # eradicate
    "F",      # pyflakes
    "FAST",   # FastAPI
    "FLY",    # flynt
    "FURB",   # refurb
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "INT",    # flake8-gettext
    "ISC",    # flake8-implicit-str-concat
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PLC",    # pylint-convention
    "PLE",    # pylint-error
    "PYI",    # flake8-pyi
    "N",      # pep8-naming
    "RSE",    # flake8-raise
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "T10",    # flake8-debugger
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warning
    "YTT",   # flake8-2020
    ]
lint.ignore = [
    "PLC0415",  # `import` should be at the top-level of a file
    "S101",     # Use of `assert` detected
    # Conflicts with our use of other linters that ruff does not recognize.
    "RUF100",   # unused-noqa	Unused noqa directive
    # Creating our own exceptions does not seem tempting for now.
    "TRY002",   # raise-vanilla-class
    "TRY003",   # raise-vanilla-args
    # `logger.error` is preferred over `logger.exception`.
    "TRY400",   # error-instead-of-exception
    ]

lint.task-tags = ["TODO", "FIXME", "NEW"]

[tool.ruff.lint.per-file-ignores]
# This file was generated, ignore it
"autodocs/source/conf.py" = ["ERA"]
# These files have valid commented out code blocks which should be ignored, there is no better way to ignore them
"src/tft_artemis/drivers/azure.py" = ["ERA"]
"src/tft_artemis/drivers/ibmcloudvpc.py" = ["ERA"]
"src/tft_artemis/drivers/openstack.py" = ["ERA"]
"src/tft_artemis/environment.py" = ["ERA"]
"tests/test_db.py" = ["ERA"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = false
known-first-party = ["tft"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "single"
